Add code and complete case analysis workflow for H1 and moderated effect of time.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ paths.R
 prepare-analytic-datasets/plots/Thumbs.db
 prepare-analytic-datasets/Thumbs.db
 documentation/Thumbs.db
+analysis-complete-case/Thumbs.db
