--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ prepare-analytic-datasets/plots/Thumbs.db
 prepare-analytic-datasets/Thumbs.db
 documentation/Thumbs.db
 analysis-complete-case/Thumbs.db
+check-conditions/plots/Thumbs.db
